--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.0",
         "@mui/material": "^5.14.0",
         "mongodb": "^5.7.0",
         "next": "^13.2.4",
