--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@lottiefiles/react-lottie-player": "^3.5.3",
         "@mui/icons-material": "^5.14.0",
         "@mui/material": "^5.14.0",
+        "lottie-react": "^2.4.0",
         "mongodb": "^5.7.0",
         "next": "^13.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.2.1"
+        "react-router-dom": "^6.2.1",
+        "react-spring": "^9.7.2"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.8",
