--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "mongodb": "^5.7.0",
         "next": "^13.2.4",
         "react": "^18.2.0",
+        "react-chatbot-kit": "^2.1.2",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.2.1",
+        "react-simple-chatbot": "^0.6.1",
         "react-spring": "^9.7.2"
     },
     "devDependencies": {
